logs/rosetta.log
Listing '.'...
Listing './bin'...
Compiling './bin/concat_csv.py'...
Compiling './bin/cut.py'...
Compiling './bin/files_to_vw.py'...
Compiling './bin/filter_sfile.py'...
Compiling './bin/groupby_reduce.py'...
Compiling './bin/join_csv.py'...
Compiling './bin/row_filter.py'...
Compiling './bin/split.py'...
Compiling './bin/subsample.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rosetta'...
Listing './lib/python3.5/site-packages/rosetta/cmdutils'...
Listing './lib/python3.5/site-packages/rosetta/modeling'...
Compiling './lib/python3.5/site-packages/rosetta/modeling/eda.py'...
***   File "./lib/python3.5/site-packages/rosetta/modeling/eda.py", line 249
    print "Warning!  plot_count_X is meaningless if quantiles==True"
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rosetta/parallel'...
Listing './lib/python3.5/site-packages/rosetta/text'...
Listing './lib/python3.5/site-packages/rosetta/workflow'...
Listing './lib/python3.5/site-packages/rosetta-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
